--- a/server/package.json
+++ b/server/package.json
@@ -1,1 +1,15 @@
+{
+  "name": "deadly-clickbait-server",
+  "version": "1.0.0",
+  "description": "Multiplayer server for Deadly Clickbait Game",
+  "main": "server.js",
+  "dependencies": {
+    "express": "^4.17.1",
+    "http": "^0.0.1-security",
+    "socket.io": "^4.0.1"
+  },
+  "scripts": {
+    "start": "node server.js"
+  }
+}
 
